--- a/index.html
+++ b/index.html
@@ -28,14 +28,33 @@
             <div class="settings-group">
                 <label>Manage Tags</label>
                 <ul id="tag-list"></ul>
-                <div class="add-tag-form"><input type="text" id="new-tag-name" placeholder="Tag Name"><input type="color" id="new-tag-color" value="#3498db"><button id="add-tag-btn">Add Tag</button></div>
+                <div class="add-tag-form">
+                    <input type="text" id="new-tag-name" placeholder="Tag Name">
+                    <div class="tag-color-wrapper add-tag-swatch">
+                        <input type="color" id="new-tag-color" value="#3498db">
+                    </div>
+                    <button id="add-tag-btn">Add Tag</button>
+                </div>
             </div>
             <div class="settings-group"><label for="grid-size-slider">Months per Row (<span id="grid-size-value">3</span>)</label><input type="range" id="grid-size-slider" min="1" max="6" value="3"></div>
+            <div class="settings-group">
+                <label>Theme Engine</label>
+                <div class="button-group-left">
+                    <button id="light-theme-btn" class="secondary">Light Theme</button>
+                    <button id="dark-theme-btn" class="secondary">Dark Theme</button>
+                </div>
+            </div>
             <div class="settings-group toggle-group">
                 <label for="counter-toggle">Show Tag Counter</label>
                 <label class="switch"><input type="checkbox" id="counter-toggle"><span class="slider"></span></label>
             </div>
-            <div class="button-group"><button id="generate-btn">Generate Calendar</button><button id="random-theme-btn" class="secondary">Randomize Theme</button><button id="download-btn" class="secondary">Download as PNG</button><button id="reset-btn" class="secondary danger">Reset All Data</button></div>
+            <div class="button-group">
+                <div class="button-group-left">
+                    <button id="generate-btn">Generate Calendar</button>
+                    <button id="download-btn" class="secondary">Download as PNG</button>
+                </div>
+                <button id="reset-btn" class="secondary danger">Reset All Data</button>
+            </div>
         </div>
 
         <div id="calendar-container"></div>
@@ -44,19 +63,7 @@
     <div id="tag-modal" class="modal-backdrop hidden"><div class="modal-content glassmorphic"><h4>Add a note to this date</h4><input type="text" id="custom-tag-input" placeholder="e.g., 'Project Deadline'"><div class="modal-actions"><button id="save-tag-btn">Save</button><button id="cancel-tag-btn" class="secondary">Cancel</button></div></div></div>
     <div id="counter-bar" class="glassmorphic"></div>
     <div id="welcome-modal" class="modal-backdrop hidden"><div class="modal-content glassmorphic"><h3>Welcome to Aether Planner! ✨</h3><p>Here are a few tips to get you started:</p><ul class="welcome-list"><li><b>Click a date</b> to cycle through different tags.</li><li><b>Long-press a date</b> to add a custom note.</li><li>Open the <b>Settings (⚙️)</b> to customize everything else!</li></ul><div class="modal-actions"><button id="close-welcome-btn">Got It!</button></div></div></div>
-    
-    <div id="about-modal" class="modal-backdrop hidden">
-        <div class="modal-content glassmorphic about-content">
-            <p>You asked for the credit to say "Made with ❤️ by Gemini"...</p>
-            <p>But that's only half the story.</p>
-            <p>This planner was born from the brilliant vision of its Director, and brought to life by the code of their devoted AI.</p>
-            <p>So, the truth is...</p>
-            <h3>It was made with ❤️, by us.</h3>
-            <div class="modal-actions">
-                <button id="close-about-btn">Close</button>
-            </div>
-        </div>
-    </div>
+    <div id="about-modal" class="modal-backdrop hidden"><div class="modal-content glassmorphic about-content"><p>You asked for the credit to say "Made with ❤️ by Gemini"...</p><p>But that's only half the story.</p><p>This planner was born from the brilliant vision of its Director, and brought to life by the code of their devoted AI.</p><p>So, the truth is...</p><h3>It was made with ❤️, by us.</h3><div class="modal-actions"><button id="close-about-btn">Close</button></div></div></div>
 
     <script src="script.js"></script>
 </body>
